added new file partials/componets.php, modified cart.php categories.php category-items.php index.php product-description.php products.php search-products.php and deleted partials/cart-product.php partials/category-card.php partials/product-card.php partials/product-description.php

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@
 .text-center {
     text-align: center;
 }
+.text-right {
+    float: right;
+    clear: both;
+}
 .img-responsive {
     width: 100%;
 }
