--- a/css/style.css
+++ b/css/style.css
@@ -805,8 +805,40 @@ a {
     transition: all 0.9s ease-in-out;
 }
 .orders-status .orders .order3:hover {
-    background-color: orange;
+    background-color: rgb(82, 72, 56);
     color: white;
     transform: translateY(-5px);
 }
 /*CSS for account page ends here*/
+
+#suggestion-box {
+    position: absolute;
+    top: 100;
+    left: 0;
+    width: 100%;
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
+    border-top: none;
+    z-index: 9999;
+    border-radius: 12px;
+    overflow: hidden;
+    padding-right: 2.5px;
+    margin-top: 4px;
+  }
+  
+  .suggestion-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .suggestion-item {
+    padding: 5px 10px;
+    border-radius: 12px;
+    cursor: pointer;
+  }
+  
+  .suggestion-item:hover {
+    background-color: #4949e0;
+  }
+  
